--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
           steps:
               - name: checkout code
-                uses: action/checkout@v3
+                uses: actions/checkout@v3
 
               - name: message
                 run: echo "Welcome to github actions"
